# gazebo-demo

./: .gitignore  README.md  agents.md  package.xml  setup.cfg  setup.py  soul.md
.github/workflows/: ros-gazebo-smoke.yml
config/: hard_court_50.yaml
docker/: Dockerfile  compose.yaml
docs/: tennis_ball_picker_competitor_analysis.md  tennis_ball_picker_gazebo_simulation_plan.md
launch/: autonomy_demo.launch.py  bridge.launch.py  p0_demo.launch.py  teleop_demo.launch.py  tennis_court.launch.py
models/ball_picker/: ball_picker.sdf  model.config
models/tennis_ball/: model.config  tennis_ball.sdf
scripts/: build_and_smoke_test.sh  ros_setup_check.sh  runtime_p0_smoke_test.sh
tennis_ball_picker_sim/: __init__.py  nearest_ball_driver.py  nearest_ball_policy.py  p0_validator.py  scatter.py  scenario.py
test/: test_assets.py  test_nearest_ball_policy.py  test_p0_validator.py  test_scatter.py  test_scenario.py
worlds/: tennis_court.sdf
