<?xml version="1.0"?>
<package format="3">
  <name>tennis_ball_picker_sim</name>
  <version>0.1.0</version>
  <description>ROS 2 and Gazebo Sim MVP for a tennis ball picking robot on a court with reproducible random ball spawning.</description>
  <maintainer email="498900619@qq.com">lxl</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
